{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 281,
  "lineage": "4a0183e7-e741-9146-ed92-af7ab53c7cbd",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdcc6c05dec346bf",
            "arn": "arn:aws:ec2:us-east-2:020046395185:instance/i-0f4e6c8bfd1712fb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0ab1aa2109eddf758",
                "volume_id": "vol-03f8190dc3f448e12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0f4e6c8bfd1712fb9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wahaj(webserver)",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041dd984bb1b9c0a7",
            "private_dns": "ip-13-0-1-146.us-east-2.compute.internal",
            "private_ip": "13.0.1.146",
            "public_ip": "3.129.73.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f8190dc3f448e12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-032a87be6a1629513"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-03b06d230eb8fc7b3",
            "tags": {
              "Name": "wahaj-Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032a87be6a1629513"
            ]
          },
          "dependencies": [
            "module.db.aws_db_instance.default",
            "module.my_ec2.aws_iam_instance_profile.test_profile",
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:internet-gateway/igw-06f76d5fdaf4d0068",
            "id": "igw-06f76d5fdaf4d0068",
            "owner_id": "020046395185",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05405c994822ec303",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f76d5fdaf4d0068",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ae65579571940d0",
            "route_table_id": "rtb-05405c994822ec303",
            "subnet_id": "subnet-03b06d230eb8fc7b3"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_route_table.web_public_rt",
            "module.my_vpc.aws_subnet.public_subnet_1",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:security-group/sg-08104d9cc75430283",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08104d9cc75430283",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "incoming for ec2-instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032a87be6a1629513"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:security-group/sg-032a87be6a1629513",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032a87be6a1629513",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "incoming for ec2-instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-07a0332c9af2d9e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "13.0.3.0/24",
            "id": "subnet-07a0332c9af2d9e88",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-08897f050ba7ef6bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "13.0.4.0/24",
            "id": "subnet-08897f050ba7ef6bc",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-03b06d230eb8fc7b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "13.0.1.0/24",
            "id": "subnet-03b06d230eb8fc7b3",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-066b78d77dab8550d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "13.0.2.0/24",
            "id": "subnet-066b78d77dab8550d",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-06083a9dc8edb43a9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:vpc/vpc-06083a9dc8edb43a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.0.0.0/16",
            "default_network_acl_id": "acl-03c74da7a407107ed",
            "default_route_table_id": "rtb-04d00e899dbee10ce",
            "default_security_group_id": "sg-09789f24f86cc7758",
            "dhcp_options_id": "dopt-1536fe7e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06083a9dc8edb43a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04d00e899dbee10ce",
            "owner_id": "020046395185",
            "tags": {
              "Name": "wahaj-vpc"
            }
          }
        }
      ]
    }
  ]
}